--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy":"https://tuf-assignment-production.up.railway.app",
   "private": true,
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
