cors package added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/insertdata" : {
-      "target" : "https://tuf-assignment-production.up.railway.app",
-      "changeOrigin" : true
-    },
-    "/jobs" : {
-      "target" : "https://stackoverflow.com",
-      "changeOrigin" : true
-    }
-  },
+  "proxy": "https://tuf-assignment-production.up.railway.app",
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
